--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,6 +1,6 @@
 .nav-container {
     height: min-content;
-    background-color: lightcoral;
+    background-color: 212121;
     padding: 20px;
     display: flex;
     align-items: center;
