--- a/src/components/ShowGrid.css
+++ b/src/components/ShowGrid.css
@@ -1,10 +1,10 @@
-.shows-container {
+.shows-grid-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.shows-container a {
+.shows-grid-container a {
     text-decoration: none;
     color: black;
 }
