fixed return to home functionality

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -17,16 +17,22 @@
     align-items: center;
 }
 
-.nav-container_link {
+.nav-container a {
     margin-right: 20px;
     text-decoration: none;
     color: white;
     font-size: 20px;
 }
 
-.nav-container_link:hover {
+.nav-container a:hover, .nav-container button:hover  {
     cursor: pointer;
     color: lightgray;
+}
+
+.nav-container button {
+    background: none;
+    border: none;
+    margin-right: 20px;
 }
 
 #youtubelogo {
