--- a/src/components/ShowGrid.css
+++ b/src/components/ShowGrid.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 30px;
+    gap: 50px;
 }
 
 .shows-grid-container a {
