--- a/src/components/MiniGrid.css
+++ b/src/components/MiniGrid.css
@@ -1,5 +1,5 @@
 .mini-grid-container {
-    width: 90%;
+    width: 95%;
     border-radius: 15px;
     margin: 50px 0px 10px 0px;
     padding: 20px;
@@ -7,12 +7,13 @@
 }
 
 .mini-grid-container_videos {
+    width: 1800px;
+    overflow: scroll;
     display: flex;
     gap: 30px;
-    overflow: scroll;
 }
 
-.mini-grid-container h3 {
+.mini-grid-container legend {
     color: white;
     font-size: 24px;
 }
