--- a/src/components/MiniGrid.css
+++ b/src/components/MiniGrid.css
@@ -1,23 +1,28 @@
 .mini-grid-container {
     width: 95%;
-    border-radius: 15px;
-    margin: 50px 0px 10px 0px;
-    padding: 20px;
+    padding: 0px 0px 0px 50px;
+    margin: 20px;
     border: 1px solid grey;
+    border-radius: 15px;
 }
 
 .mini-grid-container_videos {
-    width: 1800px;
-    overflow: scroll;
+    width: 100%;
     display: flex;
+    overflow: scroll;
     gap: 30px;
-}
-
-.mini-grid-container legend {
-    color: white;
-    font-size: 24px;
 }
 
 .mini-grid-container a {
     text-decoration: none;
+}
+
+h4 {
+    color: white;
+    background-color: #212121;
+    border: 1px solid grey;
+    border-radius: 15px;
+    margin: -15px 0px 10px 10px;
+    padding: 5px 10px;
+    width: 150px;
 }
