--- a/src/components/MiniGrid.css
+++ b/src/components/MiniGrid.css
@@ -1,7 +1,7 @@
 .mini-grid-container {
     width: 95%;
     padding: 0px 0px 0px 50px;
-    margin: 20px;
+    margin: 30px;
     border: 1px solid grey;
     border-radius: 15px;
 }
@@ -17,12 +17,20 @@
     text-decoration: none;
 }
 
-h4 {
+.mini-grid-container button {
     color: white;
+    font-size: 18px;
     background-color: #212121;
+    text-decoration: none;
     border: 1px solid grey;
     border-radius: 15px;
-    margin: -15px 0px 10px 10px;
-    padding: 5px 10px;
-    width: 150px;
+    padding: 5px 15px;
+    position: relative;
+    top: -17px; 
+}
+
+.mini-grid-container button:hover {
+    border: 1px solid grey;
+    background-color: grey;
+    cursor: pointer;
 }
