--- a/src/components/MiniGrid.css
+++ b/src/components/MiniGrid.css
@@ -17,7 +17,7 @@
     text-decoration: none;
 }
 
-.mini-grid-container button {
+.mini-grid-container span {
     color: white;
     font-size: 18px;
     background-color: #212121;
@@ -26,11 +26,5 @@
     border-radius: 15px;
     padding: 5px 15px;
     position: relative;
-    top: -17px; 
-}
-
-.mini-grid-container button:hover {
-    border: 1px solid grey;
-    background-color: grey;
-    cursor: pointer;
+    top: -12px; 
 }
