--- a/src/components/ShowListing.css
+++ b/src/components/ShowListing.css
@@ -3,15 +3,34 @@
     color: white;
 }
 
-.listing-container img {
+#thumbnail {
     width: 100%;
     border-radius: 12px;
-    border: 1px solid grey;
 }
 
 .listing-container h3 {
-    width: 100%;
-    overflow: hidden;
-    white-space: nowrap;
+    margin: 10px 0px 0px 0px;
+    padding: 0px;
+}
+
+.listing-container h5 {
+    margin: 10px 0px 15px 0px;
+    padding: 0px;
+}
+
+#profile-pic {
+    background-color: white;
+    width: 75px;
+    border-radius: 50%;
+}
+
+.listing-container_content {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    white-space: initial;
     text-overflow: ellipsis;
+}
+
+.listing-container_content_flex-one {
+    margin-left: 10px;
 }
