--- a/src/components/Show.css
+++ b/src/components/Show.css
@@ -1,42 +1,55 @@
+.main-container {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 10px;
+  height: 100vh;
+  align-items: start;
+}
+
 .video-container {
-    width: 100%;
-    max-width: 800px;
-    margin: auto;
-    /* text-align: center; */
-    color: white;
-  }
-  
-  .video-wrapper {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-    background: #000;
-  }
-  
-  .video-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .video-stats {
-    margin: 10px 0px;
-  }
-  
-  .video-stats span {
-    margin: 0px 10px 20px 0px;
-  }
-  
-  .toggle-description-btn {
-    background: none;
-    border: none;
-    color: lightblue;
-    cursor: pointer;
-    padding: 0;
-    font: inherit;
-    margin: 5px;
-  }
+  align-self: start;
+  width: 100%;
+  max-width: 800px;
+  margin: auto;
+  color: white;
+}
+
+.video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  background: #000;
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.video-stats {
+  margin: 10px 0px;
+}
+
+.video-stats span {
+  margin: 0px 10px 20px 0px;
+}
+
+.toggle-description-btn {
+  background: none;
+  border: none;
+  color: lightblue;
+  cursor: pointer;
+  padding: 0;
+  font: inherit;
+  margin: 5px;
+}
+
+.related-content-container {
+  align-self: start;
+  color: white;
+}
