--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -58,3 +58,10 @@
     cursor: pointer;
     background-color: rgb(19, 18, 18);
 }
+
+.login-container_top-div {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 15px;
+}
