--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -65,3 +65,8 @@
     left: 0;
     padding: 15px;
 }
+
+#signup-email:focus, #signup-password:focus {
+    outline: none;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.5);
+}
